# Sky-Claw

./: .clineignore  .geminiignore  .gitignore  .kimiignore  .rooignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  QUICKSTART.md  README.md  SECURITY.md  TECHNICAL_REVIEW.md  TECHNICAL_REVIEW_TASKS.md  TECHNICAL_SPEC_DISPATCHER.md  TECHNICAL_SPEC_DLQ.md  ZERO_TRUST_TODO.md  bandit_output.json  build.bat  copilot-instructions.md  extract_code.py  pyproject.toml  script.py  sky_claw.spec  sky_claw_audit_report.md  test_failure_log.txt  test_frontend_bridge.py  tracked_files.txt  validate_pr.sh
.antigravity/: settings.json
.github/: coding_conventions.md  copilot-instructions.md
.github/workflows/: ci.yml  qween_reviewer.yml  release.yml
antigravity/tests/: test_agent_tools.py  test_async_path_resolver.py  test_async_registry.py  test_auth_token_manager.py  test_auto_detect.py  test_circuit_breaker.py  test_credential_vault_sec02.py  test_dyndolod_service.py  test_exe_config_sandbox.py  test_executor_alto005.py  test_hermes_parser.py  test_hitl.py  test_hitl_timeout.py  test_hitl_wiring.py  test_lazy_init.py  test_loot.py  test_masterlist.py  test_network_gateway.py  test_nexus_downloader.py  test_patch_integration.py  test_path_resolution_service.py  test_path_validator.py  test_providers.py  test_pyinstaller.py  test_reddit_client.py  test_registry.py  test_rollback_result_frozen.py  test_router.py  test_router_token_integration.py  test_safe_save_validator.py  test_sanitize.py  test_sync_engine.py  test_synthesis_service.py  test_task011_wsl2_interop.py  test_telegram.py  test_tools.py  test_tools_installer.py  test_transport.py  test_vfs.py  test_vramr_service.py  (+3 more)
docs/: ARCHITECTURE-ANALYSIS.md  METAPROMPT-AUDITORIA-DEFINITIVA.md  frontend_specification.md  pending_ooda_status.md
docs/adr/: 0001-leveled-lists.md  0002-norte-caja-negra.md  0003-daemons-fail-fast-sin-restart.md  0004-governance-singleton-sync-defendible.md  0005-sandbox-promocion-sincrona-hitl.md  0006-retiro-stategraph-guardrail-en-dispatcher.md  0007-mo2-broker-usvfs.md
docs/audits/: 2026-07-18_orchestrator_resilience_audit.md  2026-07-18_zero_trust_network_gateway_audit.md  auditoria_03_pipeline_consolidada.md
docs/runbooks/: vfs-broker-windows-smoke.md
frontend/: Sky-Claw Operations Hub.html  index.html
frontend/css/: style.css
frontend/js/: app.js  operations-hub.js
gateway/: .env  package-lock.json  package.json  server.js  telegram_gateway.js
local/scripts/: first_run.py
local_scripts/scripts/: first_run.py  restart_agent.ps1
scripts/: chaos_test.js  first_run.py  run_chaos_suite.ps1  scrape_project.py
sky_claw/: __init__.py  __main__.py  app_context.py  auto_detect.py  compat.py  config.py  local_config.py  logging_config.py  tools_installer.py
sky_claw/Auditorias varias/: Antigravity.txt  Codex.txt  Gmini.txt  ZAi.txt  auditoria_prs_300-304_verificacion.md  skyclaw_ooda_analysis.md
sky_claw/agent/: autogen_integration.py  context_manager.py  executor.py  lcel_chains.py  providers.py  purple_security_agent.py  router.py  semantic_router.py  token_budget.py  tools.py  tools_facade.py
sky_claw/assets/: asset_scanner.py
sky_claw/comms/: _transport.py  frontend_bridge.py  interface.py  telegram.py  telegram_polling.py  telegram_sender.py  ws_daemon.py
sky_claw/core/: __init__.py  contracts.py  database.py  db_lifecycle.py  dlq_manager.py  errors.py  event_bus.py  event_payloads.py  models.py  path_resolver.py  schemas.py  vfs_orchestrator.py  windows_interop.py
sky_claw/db/: async_registry.py  journal.py  locks.py  registry.py  rollback_manager.py  snapshot_manager.py
sky_claw/discovery/: scanner.py
sky_claw/fomod/: installer.py  models.py  parser.py  resolver.py
sky_claw/gui/: agent_communication.py  app.py  dashboard.py  event_bus.py  setup_wizard.py  sky_claw_gui.py
sky_claw/local/: AGENTS.md  auto_detect.py  local_config.py  tools_installer.py
sky_claw/loot/: masterlist.py
sky_claw/mo2/: vfs.py
sky_claw/modes/: gui_mode.py  security_mode.py  telegram_mode.py
sky_claw/orchestrator/: __init__.py  maintenance_daemon.py  state_graph.py  supervisor.py  sync_engine.py  telemetry_daemon.py  tool_dispatcher.py  tool_state_machine.py  watcher_daemon.py  ws_event_streamer.py
sky_claw/reasoning/: engine.py  strategies.py  types.py
sky_claw/scraper/: masterlist.py  nexus_downloader.py  reddit_client.py  scraper_agent.py
sky_claw/security/: agent_guardrail.py  auth_token_manager.py  credential_vault.py  governance.py  metacognitive_logic.py  network_gateway.py  path_validator.py  prompt_armor.py  purple_scanner.py  sanitize.py  text_inspector.py
sky_claw/tools/: __init__.py  bodyslide_runner.py  dyndolod_runner.py  dyndolod_service.py  pandora_runner.py  patcher_pipeline.py  synthesis_service.py  vramr_service.py  wrye_bash_runner.py
sky_claw/web/: app.py  operations_hub_ws.py
sky_claw/xedit/: conflict_analyzer.py  runner.py  (+1 more)
tests/: _lifecycle_guard.py  conftest.py  test_action_manifest.py  test_agent_guardrail.py  test_agent_tools.py  test_ai_assisted_strategy.py  test_animation_tool_consolidation.py  test_app_context_arc01_arc03.py  test_app_context_scan_offload.py  test_asset_scanner_asa001.py  test_async_registry.py  test_async_registry_write_serialization.py  test_auth_token_manager.py  test_auto_detect.py  test_autogen_integration.py  test_bashed_patch_delegation.py  test_ble001_xedit.py  test_bodyslide_lock.py  test_brokered_loot_runner.py  test_chain_preview_approval_gate.py  test_chain_preview_service.py  test_chat_preview_rollback.py  test_circuit_breaker.py  test_cli_mode_timeouts.py  test_cli_modes.py  test_config_nested_merge.py  test_config_provider_model.py  test_conflict_analyzer.py  test_conflict_persistence.py  test_conflict_prompt.py  test_conflict_signatures_sync.py  test_contracts_ticket_1_1.py  test_core_async_transactions.py  test_core_event_bus.py  test_credential_vault.py  test_credential_vault_sec02.py  test_credential_vault_symlink_safety.py  test_credential_vault_wiring.py  test_db_lifecycle.py  test_dir_rollback.py  (+210 more)
(+263 files in other folders)
