[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sky-claw"
dynamic = ["version"]
description = "Autonomous Skyrim mod management agent via Mod Organizer 2"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1,<25",
    "aiohttp>=3.14.1,<4",  # >=3.14.1: fixes CVE-2026-54273..54280 (8 CVEs)
    "aiosqlite>=0.19,<1",
    "certifi",
    "cryptography>=48.0.1",  # >=48.0.1: fixes GHSA-537c-gmf6-5ccf
    "defusedxml>=0.7.1,<1",
    "pydantic>=2.0,<3",
    "py7zr>=1.1.3,<2",  # >=1.1.3: fixes CVE-2026-23879 (major bump from 0.x)
    "rarfile",
    "tenacity>=9.1,<10",
    "python-json-logger>=2.0,<4",
    "tomli-w>=1.0",
    "sv-ttk>=2.5",
    "keyring>=24.0",
    "psutil>=5.8",
    "websockets>=14.0",
    "langchain-core>=1.0,<2",
    "langgraph>=1.0.10,<3",
    # Floor at >=4.1.1 to fix CVE-2026-48775 (4.0.3 was flagged by pip-audit).
    "langgraph-checkpoint>=4.1.1,<5",
    # Transitive (via langgraph); floor at >=0.3.15 to fix CVE-2026-48776
    # (0.3.14 was flagged by pip-audit, same coordinated langgraph disclosure).
    "langgraph-sdk>=0.3.15",
    # Transitive (via langchain-core); floor at >=0.8.18 to fix
    # GHSA-f4xh-w4cj-qxq8.
    "langsmith>=0.8.18",
    "nicegui>=3.9,<4",
    "pyyaml>=6.0,<7",
    "prometheus-client>=0.20,<1",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25,<2",
    # Transitive constraint: fastapi+nicegui pull starlette; floor at >=1.3.1
    # which fixes CVE-2026-54283 (PYSEC-2026-161 also covered). Bump as needed
    # when fastapi/nicegui accept newer Starlette.
    "starlette>=1.3.1,<2",
    # Transitive (via starlette/fastapi); floor at >=0.0.31 to fix
    # CVE-2026-53538/53539/53540.
    "python-multipart>=0.0.31",
    # Transitive (via nicegui → python-socketio); floor at >=4.13.2 to fix
    # CVE-2026-48802 and CVE-2026-48809 (4.13.1 flagged by pip-audit).
    "python-engineio>=4.13.2",
    # Transitive (via nicegui); floor at >=5.16.2 to fix CVE-2026-48804
    # (5.16.1 flagged by pip-audit, same advisory wave as python-engineio).
    "python-socketio>=5.16.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=1.0",
    "pytest-aiohttp>=1.0,<2",
    "pytest-cov",
    "pytest-timeout>=2.3,<3",
    "ruff>=0.4",
    "pre-commit>=3.7,<5",
    "mypy>=1.10",
    "types-aiofiles",
    "google-genai>=1.0,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# --timeout: un test colgado (hilos aiosqlite non-daemon, deadlock async) falla
# en 2 min en vez de consumir el timeout del job de CI (20 min). method=thread
# es el único soportado en Windows y funciona con pytest-asyncio.
addopts = "--basetemp=.pytest-tmp --timeout=120 --timeout-method=thread"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["sky_claw", "tests", "local_scripts"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    # PR-F (audit hardening): regresion-prevention rules.
    # RUF006 (asyncio-dangling-task): previene el bug T1-01 que arreglamos
    # en ws_daemon (create_task sin referencia → GC silencioso). Cero
    # tolerance global, with selective # noqa for documented telemetry helpers.
    "RUF006",
    # BLE001 (blind-except): habilitado incrementalmente (T-10/T-11 del backlog
    # de TECHNICAL_REVIEW_TASKS.md) empezando por los runners de herramientas
    # externas, donde tragar errores es más caro. Las carpetas aún no limpiadas
    # lo ignoran en per-file-ignores; quitar entradas a medida que se migren.
    # Los catch-all deliberados (boundaries Regla T11, traducción a excepción
    # de dominio) llevan `# noqa: BLE001` con justificación en el sitio.
    "BLE001",
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP046",  # PEP 695 type params — conflicts with TypeVar re-exports and @dataclass Generic
]

# Reglas evaluadas pero NO habilitadas en PR-F (documentadas para follow-up):
# - RUF012 (mutable-class-default): 4 violations existentes; requieren design
#   review (ClassVar vs Field(default_factory)). Follow-up: PR-F2.
# - RUF022 (unsorted-dunder-all): 4 cosmetics; sin valor de seguridad.
# - ASYNC230/240: 52 violations en async asyncio (no trio/anyio); false-positive
#   ratio alta. Lint actual ya delega a `to_thread()` donde importa.
# - S603/S607: 22 violations en file_permissions (icacls/powershell por PATH —
#   tooling Windows estandar). Per-line noqa cuando se evalue contra threat model.

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "RUF006", "BLE001"]   # RUF006 OK en tests: task lifecycle controlado por pytest.
"local_scripts/**" = ["BLE001"]
"scripts/**" = ["BLE001"]
# BLE001 pendiente por carpeta (T-10 limpió sky_claw/local/tools/, T-11
# sky_claw/local/xedit/; las siguientes van quitando entradas de esta
# lista). Archivos top-level explícitos: los globs `*` de ruff cruzan
# separadores y taparían las carpetas ya limpias.
"sky_claw/app_context.py" = ["BLE001"]
"sky_claw/compat.py" = ["BLE001"]
"sky_claw/config.py" = ["BLE001"]
"sky_claw/logging_config.py" = ["BLE001"]
"sky_claw/antigravity/**" = ["BLE001"]
"sky_claw/local/auto_detect.py" = ["BLE001"]
"sky_claw/local/local_config.py" = ["BLE001"]
"sky_claw/local/tools_installer.py" = ["BLE001"]
"sky_claw/local/assets/**" = ["BLE001"]
"sky_claw/local/discovery/**" = ["BLE001"]
"sky_claw/local/fomod/**" = ["BLE001"]
"sky_claw/local/loot/**" = ["BLE001"]
"sky_claw/local/mo2/**" = ["BLE001"]
"sky_claw/local/validators/**" = ["BLE001"]

[tool.ruff.lint.isort]
known-first-party = ["sky_claw"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
# Best practices for path resolution
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
# Progressive typing: strict checks disabled until modules are fully annotated.
# Re-enable individual checks as typing coverage improves.
strict = false
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
# strict_equality: flags comparisons between non-overlapping types (e.g. str == bytes).
# Probed clean — 0 violations across the 196 checked files — so it's a free
# regression guard. NOTE: warn_unreachable is deliberately NOT enabled: it
# false-positives on the correct double-checked-locking idiom in
# sky_claw/antigravity/core/contracts.py (mypy can't model cross-thread
# mutation of the flag).
strict_equality = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = [
    '^tests/',
    '^scratch/',
    '^autoskills_tmp/',
    '^project_scrape/',
    '^\.venv/',
    '^\.agents/',
]

# Modules with unresolved type errors — ignore until annotated
[[tool.mypy.overrides]]
module = [
    "sky_claw.antigravity.gui.*",
    "sky_claw.antigravity.comms.*",
    "sky_claw.antigravity.agent.*",
    "sky_claw.antigravity.modes.*",
    "sky_claw.antigravity.orchestrator.*",
    "sky_claw.antigravity.scraper.*",
    "sky_claw.antigravity.web.*",
    "sky_claw.antigravity.db.*",
    "sky_claw.antigravity.security.*",
    "sky_claw.antigravity.core.*",
    "sky_claw.local.tools.*",
    "sky_claw.local.fomod.*",
    "sky_claw.local.xedit.*",
    "sky_claw.local.loot.*",
    "sky_claw.local.mo2.*",
    "sky_claw.local.validators.*",
    "sky_claw.local.auto_detect",
    "sky_claw.local.local_config",
    "sky_claw.local.discovery.*",
    "sky_claw.app_context",
    "sky_claw.config",
    "sky_claw.logging_config",
    "sky_claw.__main__",
    "sky_claw.local.tools_installer",
]
ignore_errors = true  # TODO: Remove after type-coverage sprint. Currently 1,684 mypy errors across ~30 modules; re-enable incrementally per-module.

# Wave-1 mypy sprint: core/ foundational modules enabled for checking.
# These override the broad sky_claw.antigravity.core.* ignore above.
[[tool.mypy.overrides]]
module = [
    "sky_claw.antigravity.core.errors",
    "sky_claw.antigravity.core.contracts",
    "sky_claw.antigravity.core.models",
    "sky_claw.antigravity.core.schemas",
    "sky_claw.antigravity.core.event_payloads",
    "sky_claw.antigravity.core.metrics",
    "sky_claw.antigravity.core.metrics_server",
    "sky_claw.antigravity.core.tracing",
    "sky_claw.antigravity.core.dlq_manager",
]
ignore_errors = false

# Strict mode for refactored modules — overrides the broad ignore above
[[tool.mypy.overrides]]
module = [
    "sky_claw.antigravity.orchestrator.sync_engine",
    "sky_claw.local.mo2.ini_editor",  # PR-1 grass cache: módulo nuevo, nace estricto
    "sky_claw.local.mo2.grass_profile",  # PR-3 grass cache: módulo nuevo, nace estricto
    "sky_claw.local.mo2.profile_sandbox",  # T-27: módulo nuevo, nace estricto (patrón T-12)
    "sky_claw.local.mo2.plugin_sources",  # T-30w: resolver de fuentes de plugins, estricto
    "sky_claw.local.mo2.sandbox_run",  # T-27b·1: orquestador de rituales en sandbox, estricto
    "sky_claw.local.validators.missing_masters",  # T-30·1: módulo nuevo, nace estricto
    "sky_claw.local.validators.plugin_header",  # T-30·2/T-17: parser TES4 canónico, estricto
    "sky_claw.local.validators.plugin_limits",  # T-30·2: sensor de límites full/light, estricto
    "sky_claw.local.validators.overwrite_health",  # T-30·3: sensor de overwrite sucio, estricto
    "sky_claw.local.xedit.flag_rules",  # T-19b: motor declarativo de reglas de flags, estricto
    "sky_claw.local.xedit.grass_analyzer",  # PR-2 grass cache: módulo nuevo, nace estricto
    "sky_claw.local.xedit.script_staging",  # PR-2 grass cache: módulo nuevo, nace estricto
    "sky_claw.local.tools.grass_cache_runner",  # PR-4 grass cache: módulo nuevo, nace estricto
    "sky_claw.local.validators.post_run",  # T-21: validador post-run, estricto
    "sky_claw.local.validators.write_permissions",  # T-30·4: sensor de permisos de escritura, estricto
    "sky_claw.local.xedit.patch_advisor",  # T-20: asistente de estrategia de parcheo, estricto
    "sky_claw.antigravity.orchestrator.preview.flight_report",  # T-28: módulo nuevo, nace estricto
    "sky_claw.antigravity.orchestrator.sandbox_promotion",  # T-27b·2: flujo promote/discard HITL, estricto
]
strict = true
ignore_errors = false

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["sky_claw"]

[tool.hatch.build.targets.wheel.force-include]
"sky_claw/antigravity/security/security_policy.yaml" = "sky_claw/antigravity/security/security_policy.yaml"
# PR-2 grass cache: los .pas bundleados se stagean a "Edit Scripts" en runtime;
# sin ellos run_script falla con script-not-found (anclado en test_packaging.py).
"sky_claw/local/xedit/scripts" = "sky_claw/local/xedit/scripts"
